2002-02-27  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-analysis-tools.c (error_in_entry) : gnumeric-expr-
	  entries are not gtkentries.
	(tool_destroy) : use g_object_unref
	(tool_load_selection) : gnumeric-expr-entries are not 
	  gtkentries.
	(dialog_random_tool_init) : load selection into gnumeric-
	  expr-entry rather than gtkentry
	
2002-02-27  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* autocorrect-glade : don't set has_focus for a widget on an
	  inactive notebook page
	
2002-02-27  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-goal-seek.c (focus_on_entry) : change argument type
	(cb_dialog_apply_clicked) : handle new expr entry widget, use
	  entry_to_float_with_format

2002-02-27  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-consolidate.c (is_cell_ref) replace with 
	  gnm_expr_entry_is_cell_ref
	(cb_add_clicked) : use gnm_expr_entry_global_range_name
	* dialog-solver.c (is_hom_row_or_col_ref) : use 
	  gnm_expr_entry_parse_as_value
	(is_cell_ref) replace with gnm_expr_entry_is_cell_ref
	(cb_dialog_add_clicked) : use gnm_expr_entry_parse_as_value
	(cb_dialog_solve_clicked) : ditto

2002-02-26  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-consolidate.c (cb_add_clicked) : expr-entries are not
	  GTK_EDITABLES

2002-02-26  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-about.c (dialog_about) : don't use gnome_dialog

2002-02-25  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-cell-format.c (fmt_dialog_init_validation_expr_entry) :
	  set flags
	(cb_fmt_dialog_set_focus) : remove code now in wbcg_edit_attach_guru
	* dialog-cell-sort.c (dialog_set_focus) : deleted
	* dialog-consolidate.c (cb_dialog_set_focus) : deleted
	(setup_widgets) : set expr entry flags
	* dialog-define-names.c (cb_name_guru_set_focus) : deleted
	(name_guru_init) : set expr entry flags
	* dialog-goal-seek.c (dialog_set_focus) : deleted
	* dialog-printer-setup.c (cb_do_print_set_focus) : deleted
	* dialog-search-replace.c (set_focus) : deleted